--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a>
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="">Tezos Paris</a>: <a href="talks/fstar_tezos_nov_2018/out/fstar-tezos.html">slides</a> (2018-11-14)</li>
+      <li><b>Recent:</b> <a href="">Tezos Paris</a>: <a href="talks/fstar_tezos_nov_2018/out/fstar-tezos.html">slides</a>, <b><a href="https://youtu.be/SPCko8ACB0M">video</a></b> (2018-11-14)</li>
       <li>Invited Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
       <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> (2017-06-14)</li>
     </ul>
