--- a/index.html
+++ b/index.html
@@ -431,7 +431,9 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a> (Postdoctoral Researcher)</li>
+
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li> -->
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Research Engineer)</li>
 
