--- a/publications.html
+++ b/publications.html
@@ -30,7 +30,7 @@
             C&#259;t&#259;lin Hri&#355;cu, and
             Benjamin C. Pierce.<br/>
     <b><a href="http://arxiv.org/abs/1705.07354">The Meaning of Memory Safety</a></b>.
-            Accepted at <a href="https://www.etaps.org/index.php/2018/post">7th International Conference on Principles of Security and Trust (POST)</a>, April 2018.
+            In <a href="https://www.etaps.org/index.php/2018/post">7th International Conference on Principles of Security and Trust (POST)</a>, pages 79--105, April 2018.
   <ul style="font-size: small">
     <li>A previous draft was entitled
         Alpha is for Address! The Essence of Memory Safety</li>
@@ -137,7 +137,7 @@
     Li-yao Xia.
     <b><a href="https://arxiv.org/abs/1607.05443">Beginner's Luck: A Language for Random Generators.</a></b>
     In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>,
-    pages 114--129. ACM, January 2017. 
+    pages 114--129. ACM, January 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -438,26 +438,24 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     Tahina Ramananandro,
     Aseem Rastogi,
     Nikhil Swamy,
-    <b><a href="https://arxiv.org/abs/1803.06547">Meta-F*: Metaprogramming and Tactics in an Effectful Program Verifier</a></b>.
+    <b><a href="https://arxiv.org/abs/1803.06547">Meta-F*: Proof automation with SMT, Tactics, and Metaprograms</a></b>.
     arXiv:1803.06547. March, 2018.
-    <!-- In <a href="https://conf.researchr.org/home/icfp-2017">22nd ACM SIGPLAN International Conference on -->
-    <!-- Functional Programming (ICFP)</a>, PACMPL, 1(ICFP):17:1–17:29, September 2017. -->
   </li>
 
   <li style="margin-bottom: 1ex;">
+            Carmine Abate,
+            Arthur Azevedo de Amorim,
+            Roberto Blanco,
+            Ana Nora Evans,
             Guglielmo Fachini,
             C&#259;t&#259;lin Hri&#355;cu,
-            Marco Stronati,
-            Arthur Azevedo de Amorim,
-            Ana Nora Evans,
-            Carmine Abate,
-            Roberto Blanco,
             Théo Laurent,
-            Benjamin C. Pierce, and
+            Benjamin C. Pierce,
+            Marco Stronati, and
             Andrew Tolmach.
     <b><a href="https://arxiv.org/abs/1802.00588">When Good Components Go Bad:
            Formally Secure Compilation Despite Dynamic Compromise</a></b>.
-           February 2018.
+           In <a href="https://ccs2018.sigsac.org/">25th ACM Conference on Computer and Communications Security (CCS)</a>, October 2018.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/when-good-components-go-bad">Coq development</a>
       <li>A previous extended abstract was called
