--- a/index.html
+++ b/index.html
@@ -471,6 +471,89 @@ MPRI website</a>.</p>
     </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;">
+    Guido Martínez,
+    Danel Ahman,
+    Victor Dumitrescu,
+    Nick Giannarakis,
+    Chris Hawblitzel,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Monal Narasimhamurthy,
+    Zoe Paraskevopoulou,
+    Clément Pit-Claudel,
+    Jonathan Protzenko,
+    Tahina Ramananandro,
+    Aseem Rastogi,
+    Nikhil Swamy,
+    <b><a href="https://arxiv.org/abs/1803.06547">Meta-F*: Proof automation with SMT, Tactics, and Metaprograms</a></b>.
+    arXiv:1803.06547. March, 2018.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+            Carmine Abate,
+            Arthur Azevedo de Amorim,
+            Roberto Blanco,
+            Ana Nora Evans,
+            Guglielmo Fachini,
+            C&#259;t&#259;lin Hri&#355;cu,
+            Théo Laurent,
+            Benjamin C. Pierce,
+            Marco Stronati, and
+            Andrew Tolmach.
+    <b><a href="https://arxiv.org/abs/1802.00588">When Good Components Go Bad:
+           Formally Secure Compilation Despite Dynamic Compromise</a></b>.
+           In <a href="https://ccs2018.sigsac.org/">25th ACM Conference on Computer and Communications Security (CCS)</a>, October 2018.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/when-good-components-go-bad">Coq development</a>
+      <li>A previous extended abstract was called
+          <a href="https://arxiv.org/abs/1710.07308">Formally Secure Compilation of Unsafe Low-Level Components</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+            Arthur Azevedo de Amorim,
+            C&#259;t&#259;lin Hri&#355;cu, and
+            Benjamin C. Pierce.<br/>
+    <b><a href="http://arxiv.org/abs/1705.07354">The Meaning of Memory Safety</a></b>.
+            In <a href="https://www.etaps.org/index.php/2018/post">7th International Conference on Principles of Security and Trust (POST)</a>, pages 79--105, April 2018.
+  <ul style="font-size: small">
+    <li>A previous draft was entitled
+        Alpha is for Address! The Essence of Memory Safety</li>
+    <li>Coq proofs available <a href="https://github.com/arthuraa/memory-safe-language">here</a> and <a href="https://github.com/micro-policies/micro-policies-coq/tree/master/memory_safety">here</a></li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+            Danel Ahman,
+            Cédric Fournet,
+            C&#259;t&#259;lin Hri&#355;cu,
+            Kenji Maillard,
+            Aseem Rastogi, and
+            Nikhil Swamy.
+    <b><a href="http://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>.
+            In <a href="https://popl18.sigplan.org">45th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>,
+            PACMPL, 2(POPL):65:1-65:30, January 2018.
+  <ul style="font-size: small">
+    <li><a href="https://fstar-lang.org/papers/monotonicity/">Online appendices and software artifacts</a></li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Niklas Grimm,
+    Kenji Maillard,
+    Cédric Fournet,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Matteo Maffei,
+    Jonathan Protzenko,
+    Tahina Ramananandro,
+    Aseem Rastogi,
+    Nikhil Swamy, and
+    Santiago Zanella-Béguelin.
+    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification: Applied to Information Security, Program Equivalence, and Optimizations</a></b>.
+    In <a href="https://popl18.sigplan.org/track/CPP-2018">7th ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP)</a>, International Conference on Certified Programs and Proofs (CPP), pages 130--145, January 2018  <ul style="font-size: small">
+    <li><a href="https://github.com/FStarLang/FStar/tree/master/examples/rel">Code for the examples</a></li>
+  </ul>
+  </li>
   <!-- <li style="margin-bottom: 1ex;"> -->
   <!--    Alejandro Aguirre, -->
   <!--    C&#259;t&#259;lin Hri&#355;cu, -->
