--- a/publications.html
+++ b/publications.html
@@ -378,9 +378,10 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
   </li>
 </ol>
 
-<h3>Book</h3>
-<ol start="28" style="width:42em; text-align: left">
-  <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <a href="http://www.cis.upenn.edu/~bcpierce/sf/">Software Foundations</a>, Electronic textbook, 2017.</li>
+<h3>Books</h3>
+<ol start="29" style="width:42em; text-align: left">
+  <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <a href="http://www.cis.upenn.edu/~bcpierce/sf/">Software Foundations: Logical Foundations</a>, Electronic textbook, August 2018.</li>
+  <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <a href="http://www.cis.upenn.edu/~bcpierce/sf/">Software Foundations: Programming Language Foundations</a>, Electronic textbook, August 2018.</li>
 </ol>
 
 <!-- <h3>Refereed Workshop Papers</h3> -->
