--- a/publications.html
+++ b/publications.html
@@ -406,8 +406,19 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!--     <\!--   </li> -\-> -->
 <!-- </ol> -->
 
-<h3>PhD Thesis</h3>
+<h3>Theses</h3>
 <ol start="29" style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://prosecco.gforge.inria.fr/personal/hritcu/temp/habil/catalin_habil.pdf"></a>. PhD Thesis, ENS Paris, January 2019.
+  <ul style="font-size: small">
+    <li>Main Coq formalizations available
+        <a href="https://github.com/secure-compilation/exploring-robust-property-preservation">here</a> and
+        <a href="https://github.com/secure-compilation/when-good-components-go-bad">here</a></li>
+    </ul>
+    </li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://scidok.sulb.uni-saarland.de/volltexte/2012/4800/pdf/catalin_phd_2012_03_24_final.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Security Protocol Analysis</a>. PhD Thesis, <!--Advisors: Michael Backes, Matteo Maffei, and Andrew D. Gordon (MSR)--> Saarland University, <!--Saarbr&uuml;cken. Submitted: 14 November 2011. Defended: 10 January 2012. Published: 29 March 2012--> January 2012.
   <ul style="font-size: small">
     <li>Coq formalizations, implementations, samples, and further details available on the pages of <a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">the Zero-knowledge Type-checker</a> and of <a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">the F5 Toolchain for RCF</a>.</li>
