--- a/publications.html
+++ b/publications.html
@@ -409,7 +409,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <h3>Theses</h3>
 <ol start="29" style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://prosecco.gforge.inria.fr/personal/hritcu/temp/habil/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a>. Habilitation Thesis, ENS Paris, January 2019.
+  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://prosecco.gforge.inria.fr/personal/hritcu/temp/habil/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a>.<br/>Habilitation Thesis, ENS Paris, January 2019.
   <ul style="font-size: small">
     <li>Main Coq formalizations available
         <a href="https://github.com/secure-compilation/exploring-robust-property-preservation">here</a> and
