--- a/publications.html
+++ b/publications.html
@@ -475,15 +475,15 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     arXiv:1803.06547. March, 2018.
   </li>
 
-  <li style="margin-bottom: 1ex;">
-            Deepak Garg,
-            C&#259;t&#259;lin Hri&#355;cu,
-            Marco Patrignani,
-            Marco Stronati, and
-            David Swasey.
-    <b><a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation (extended abstract)</a></b>.
-            Presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--           Deepak Garg, -->
+  <!--           C&#259;t&#259;lin Hri&#355;cu, -->
+  <!--           Marco Patrignani, -->
+  <!--           Marco Stronati, and -->
+  <!--           David Swasey. -->
+  <!--   <b><a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation (extended abstract)</a></b>. -->
+  <!--           Presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018. -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;">
      Alejandro Aguirre,
@@ -494,18 +494,18 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
   Talk at <a href="http://hatt2016.inria.fr/">1st International Workshop on Hammers for Type Theories (HaTT)</a>, July 2016.
   </li>
 
-  <li style="margin-bottom: 1ex;">
-            Yannis Juglaret,
-            C&#259;t&#259;lin Hri&#355;cu,
-            Arthur Azevedo de Amorim,
-            Benjamin C. Pierce,
-            Antal Spector-Zabusky, and
-            Andrew Tolmach.
-    <b><a href="http://arxiv.org/abs/1510.00697">
-          Towards a Fully Abstract Compiler Using Micro-Policies:
-          Secure Compilation for Mutually Distrustful Components</a></b>.
-    Technical Report, arXiv:1510.00697, October 2015.
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--           Yannis Juglaret, -->
+  <!--           C&#259;t&#259;lin Hri&#355;cu, -->
+  <!--           Arthur Azevedo de Amorim, -->
+  <!--           Benjamin C. Pierce, -->
+  <!--           Antal Spector-Zabusky, and -->
+  <!--           Andrew Tolmach. -->
+  <!--   <b><a href="http://arxiv.org/abs/1510.00697"> -->
+  <!--         Towards a Fully Abstract Compiler Using Micro-Policies: -->
+  <!--         Secure Compilation for Mutually Distrustful Components</a></b>. -->
+  <!--   Technical Report, arXiv:1510.00697, October 2015. -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;">
       Udit Dhawan,
