--- a/publications.html
+++ b/publications.html
@@ -458,6 +458,23 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <ol start="33" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Carmine Abate,
+    Roberto Blanco,
+    Deepak Garg,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Marco Patrignani, and
+    Jérémy Thibault,
+    <b><a href="http://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
+      Exploring Robust Property Preservation for Secure Compilation</a></b>.
+    arXiv:1807.04603. July, 2018.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Supplementary materials including Coq development</a>
+      <li>A previous extended abstract was called
+          <a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Guido Martínez,
     Danel Ahman,
     Victor Dumitrescu,
