--- a/publications.html
+++ b/publications.html
@@ -384,6 +384,14 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a>, Electronic textbook, August 2018.</li>
 </ol>
 
+<h3>Editor</h3>
+<ol start="31" style="width:42em; text-align: left">
+  <li style="margin-bottom: 1ex;">
+  Amal Ahmed, Deepak Garg, Catalin Hritcu, Frank Piessens.
+  <a href="https://doi.org/10.4230/DagRep.8.5.1">Secure Compilation
+  (Dagstuhl Seminar 18201)</a>. Dagstuhl Reports 8(5): 1-30 (2018)</li>
+</ol>
+
 <!-- <h3>Refereed Workshop Papers</h3> -->
 <!-- <ol start="24" style="width:42em; text-align: left"> -->
 
@@ -407,7 +415,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Theses</h3>
-<ol start="31" style="width:42em; text-align: left">
+<ol start="32" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#355;cu. <a href="http://prosecco.gforge.inria.fr/personal/hritcu/temp/habil/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a>.<br/>Habilitation Thesis, ENS Paris, January 2019.
   <ul style="font-size: small">
@@ -455,7 +463,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!--
 -->
 <h3>Informal Publications and Drafts</h3>
-<ol start="33" style="width:42em; text-align: left">
+<ol start="34" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
     Carmine Abate,
