--- a/publications.html
+++ b/publications.html
@@ -387,7 +387,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <h3>Editor</h3>
 <ol start="31" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-  Amal Ahmed, Deepak Garg, Catalin Hritcu, Frank Piessens.
+  Amal Ahmed, Deepak Garg, Catalin Hritcu, Frank Piessens.<br/>
   <a href="https://doi.org/10.4230/DagRep.8.5.1">Secure Compilation
   (Dagstuhl Seminar 18201)</a>. Dagstuhl Reports 8(5): 1-30 (2018)</li>
 </ol>
