--- a/publications.html
+++ b/publications.html
@@ -380,16 +380,16 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
 <h3>Books</h3>
 <ol start="29" style="width:42em; text-align: left">
-  <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Software Foundations: Logical Foundations</a>, Electronic textbook, August 2018.</li>
-  <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a>, Electronic textbook, August 2018.</li>
+  <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Software Foundations: Logical Foundations</a></b>, Electronic textbook, August 2018.</li>
+  <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#355;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a></b>, Electronic textbook, August 2018.</li>
 </ol>
 
 <h3>Editor</h3>
 <ol start="31" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
   Amal Ahmed, Deepak Garg, Catalin Hritcu, Frank Piessens.<br/>
-  <a href="https://doi.org/10.4230/DagRep.8.5.1">Secure Compilation
-  (Dagstuhl Seminar 18201)</a>. Dagstuhl Reports 8(5): 1-30 (2018)</li>
+  <b><a href="https://doi.org/10.4230/DagRep.8.5.1">Secure Compilation
+  (Dagstuhl Seminar 18201)</a></b>. Dagstuhl Reports 8(5): 1-30 (2018)</li>
 </ol>
 
 <!-- <h3>Refereed Workshop Papers</h3> -->
