--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/kyoDralliam">Kenji Maillard</a> (PhD Student, ENS Paris)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a> (PhD Student, Inria Paris)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a> (PhD Student, Inria Paris)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (PhD Student, Inria Paris)</li>
 
