--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ could contribute:
  <a href="https://www.fstar-lang.org/#papers">papers</a>)
     <ul>
       <li>
-      <b>Looking for one M2 intern and one Post-Doctoral Researcher on this project</a></b>
+      <b>Currently looking for one Master's (M2) intern and on this project</a></b>
       <!-- for Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris --></li>
     </ul>
   </li>
