--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction: Exploring Robust Property Preservation for Secure Compilation</em></a>
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a>, <b> (2019-01-13)</li>
+      <li><b>Recent:</b> <a href="">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a> (2019-01-13)</li>
     </ul>
 
   </li>
