--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ could contribute:
 <ul>
   <li style="margin-bottom: 1ex;"><b><a href="https://secure-compilation.github.io/">ERC SECOMP:
                                         Formally Secure Compilation</a></b>
-(<a href="http://prosecco.gforge.inria.fr/personal/hritcu/temp/habil/catalin_habil.pdf#page=80">topics</a>;
+(<a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf#page=80">topics</a>;
  <a href="https://github.com/secure-compilation">code</a>;
  <a href="https://secure-compilation.github.io/#publications">papers</a>)
     <ul>
@@ -118,6 +118,19 @@ could contribute:
 <ul style="width:42em; text-align: left">
   
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li> -->
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org">
+    Habilitation defense on 29 January 2019
+    (<a href="">Announcement</a>,
+     <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf">Thesis</a>)
+Principles of Programming Languages, POPL 2019</a></b>
+    (Artifact Evaluation Co-Chair)
+  <ul>
+  <li>: </li>
+  <li></li>
+  </ul>
+  <ul>
+
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org">
     Principles of Programming Languages, POPL 2019</a></b>
