--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@ could contribute:
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li> -->
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org">
-    Habilitation defense on 29 January 2019
-    (<a href="">Announcement</a>,
-     <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf">Thesis</a>)
+    <a href="">Habilitation defense on 29 January 2019</a>
+     (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf">Thesis</a>)
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org">
