--- a/index.html
+++ b/index.html
@@ -124,22 +124,22 @@ could contribute:
      (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf">Thesis</a>)
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org">
-    Principles of Programming Languages, POPL 2019</a></b>
-    (Artifact Evaluation Co-Chair)
-  <ul>
-  <!-- <li>Abstract deadline: 1 July 2017</li> -->
-  <!-- <li>Submission deadline: 7 July 2017</li> -->
-  <!-- 8-13 January 2018, Los Angeles, USA https://popl18.sigplan.org/ -->
-  <li>Conference: 13-19 January 2019, Lisbon, Portugal</li>
-  </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://secdev.ieee.org/2019/">IEEE Cybersecurity Development Conference, SecDev 2019</a></b> (PC member)
   <ul>
   <li>Submission deadline: 8 April 2019</li>
   <li>Conference: 25 - 27 September 2019, McLean, VA, USA</li>
   </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org">
+    Principles of Programming Languages, POPL 2019</a></b>
+    (Artifact Evaluation Co-Chair)
+  <!-- <ul> -->
+  <!-- <li>Abstract deadline: 1 July 2017</li> -->
+  <!-- <li>Submission deadline: 7 July 2017</li> -->
+  <!-- 8-13 January 2018, Los Angeles, USA https://popl18.sigplan.org/ -->
+  <!-- <li>Conference: 13-19 January 2019, Lisbon, Portugal</li> -->
+  <!-- </ul> -->
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference Computer and Communications Security, CCS 2018</a> (PC member)
