--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ MPRI website</a>.</p>
     Aseem Rastogi,
     Nikhil Swamy,
     <b><a href="https://arxiv.org/abs/1803.06547">Meta-F*: Proof automation with SMT, Tactics, and Metaprograms</a></b>.
-    arXiv:1803.06547. March, 2018.
+   To appear at the <a href="https://conf.researchr.org/track/etaps-2019/esop-2019-papers">28th European Symposium on Programming (ESOP)</a>, 2019.
   </li>
 
   <li style="margin-bottom: 1ex;">
