--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ MPRI website</a>.</p>
     Nikhil Swamy, and
     Santiago Zanella-Béguelin.
     <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification: Applied to Information Security, Program Equivalence, and Optimizations</a></b>.
-    In <a href="https://popl18.sigplan.org/track/CPP-2018">7th ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP)</a>, International Conference on Certified Programs and Proofs (CPP), pages 130--145, January 2018  <ul style="font-size: small">
+    In <a href="https://popl18.sigplan.org/track/CPP-2018">7th ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP)</a>, pages 130--145, January 2018  <ul style="font-size: small">
     <li><a href="https://github.com/FStarLang/FStar/tree/master/examples/rel">Code for the examples</a></li>
   </ul>
   </li>
