--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,24 @@
 <ol start="1" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Guido Martínez,
+    Danel Ahman,
+    Victor Dumitrescu,
+    Nick Giannarakis,
+    Chris Hawblitzel,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Monal Narasimhamurthy,
+    Zoe Paraskevopoulou,
+    Clément Pit-Claudel,
+    Jonathan Protzenko,
+    Tahina Ramananandro,
+    Aseem Rastogi,
+    Nikhil Swamy,
+    <b><a href="https://arxiv.org/abs/1803.06547">Meta-F*: Proof automation with SMT, Tactics, and Metaprograms</a></b>.
+   To appear in <a href="https://conf.researchr.org/track/etaps-2019/esop-2019-papers">28th European Symposium on Programming (ESOP)</a>, 2019.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
             Carmine Abate,
             Arthur Azevedo de Amorim,
             Roberto Blanco,
