--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org">
-    Principles of Programming Languages, POPL 2019</a></b>
+  <li style="margin-bottom: 1ex;"><a href="https://popl19.sigplan.org">
+    Principles of Programming Languages, POPL 2019</a>
     (Artifact Evaluation Co-Chair)
   <!-- <ul> -->
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
