--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ could contribute:
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li> -->
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org">
-    <a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense on Tuesday, 29 January 2019 at Inria Paris</a>
-     (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf">Thesis</a>)</b>
+    <a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense on Tuesday, 29 January 2019 at Inria Paris</a></b>
+     (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf">Thesis</a>)
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://secdev.ieee.org/2019/">IEEE Cybersecurity Development Conference, SecDev 2019</a></b> (PC member)
