--- a/talks.html
+++ b/talks.html
@@ -24,9 +24,30 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe Low-level Components</em></a>
+  <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
+
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href=""></a> IRIF, Paris 7: <a href="talks/2018-02-26-Secure-Compilation-IRIF.pdf">slides</a> (2018-02-26)</li>
+      <li><b>Recent:</b> <a href="https://popl19.sigplan.org/track/prisc-2019">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a> (2019-01-13)</li>
+    </ul>
+
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a>
+
+    <ul style="font-size: small">
+      <li><b>Recent:</b> <a href="https://www.nomadic-labs.com/">Nomadic Labs Paris</a> (<a href="https://tezos.com">Tezos</a>): <a href="talks/fstar_tezos_nov_2018/out/fstar-tezos.html">slides</a>, <b><a href="https://youtu.be/SPCko8ACB0M">video</a></b> (2018-11-14)</li>
+      <li>Invited Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
+      <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> (2017-06-14)</li>
+    </ul>
+
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em>When Good Components Go Bad</em></a>
+    <ul style="font-size: small">
+      <li><b>Recent:</b> <a href="https://www.sigsac.org/ccs/CCS2018/">Computer and Communications Security, CCS 2018</a>: <a href="talks/2018-10-18-When-Good-Components-Go-Bad-CCS.pdf">slides</a> (2018-10-18)</li>
+      <li>DARPA SSITH/HOPE PI meeting: <a href="talks/2018-05-30-When-Good-Components-Go-Bad-SSITH-PI-Meeting.pdf">slides</a> (2018-05-30)</li>
+      <li><a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=18201">Dagstuhl Seminar on Secure Compilation</a>: <a href="talks/2018-05-17-When-Good-Components-Go-Bad-Dagstuhl.pdf">slides</a> (2018-05-17)</li>
+      <li><a href="https://www.irif.fr/seminaires/verif/index">IRIF Verification Seminar</a>, Paris 7: <a href="talks/2018-02-26-Secure-Compilation-IRIF.pdf">slides</a> (2018-02-26)</li>
       <li><a href="http://seminaire-dga.gforge.inria.fr/2017/CatalinHritcu_fr.html">SoSySec seminar: Software and Systems Security</a> at
 IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</a>, <b><a href="https://videos-rennes.inria.fr/video/BkHzYy-jM">video</a></b> (2018-02-05)</li>
       <li><a href="http://popl18.sigplan.org/track/prisc-2018">Workshop on Principles of Secure Compilation (PriSC'18)</a> at POPL'19 in LA: <a href="https://popl18.sigplan.org/event?action-call-with-get-request-type=1&action253048efca6aee4547702963143c6170288=1&__ajax_runtime_request__=1&context=POPL-2018&event=prisc-2018-formally-secure-compilation-of-unsafe-low-level-components">slides</a> (2018-01-13)</li>
@@ -35,7 +56,24 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><em><a href="https://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC'18</a></em></a> 
+  <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation</em></a>
+    <ul style="font-size: small">
+      <li><b>Recent:</b> Invited Keynote talk at <a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium (FROM 2018)</a>: <a href="talks/2018-06-20-Secure-Compilation-FROM.pdf">slides</a> (2018-06-20)</li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex"><em>What is secure compilation?</em>
+    <ul style="font-size: small">
+      <li><b>Recent:</b> Discussion at <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=18201">Dagstuhl Seminar on Secure Compilation</a>:
+          <a href="talks/2018-05-14-Secure-Compilation-Goals-and-Attackers-Dagstuhl.pdf">slides</a> (2018-05-14)
+      </li>
+      <li>Short talk at <a href="https://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting (SCM)</a>:
+          <a href="talks/2017-01-15-What-Is-Secure-Compilation-SCM.pdf">slides</a> (2017-01-15)
+      </li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em><a href="https://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC'18</a></em></a>
 
     <ul style="font-size: small">
       <li>Program Chair's Welcome Message: <a href="https://popl18.sigplan.org/event/prisc-2018-prisc-welcome">slides</a> (2018-01-13)</li>
@@ -43,24 +81,15 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>What's new in F*?</em></a> 
+  <li style="margin-bottom: 1ex;"><em>What's new in F*?</em></a>
 
     <ul style="font-size: small">
-      <li><b>Recent</b>: Talk at <a href="">Everest Workshop</a>: <a href="talks/fstar_all_hands_sept_2017/out/fstar-all-hands.html">slides</a> (2017-10-02)</li>
+      <li>Talk at <a href="">Everest Workshop</a>: <a href="talks/fstar_all_hands_sept_2017/out/fstar-all-hands.html">slides</a> (2017-10-02)</li>
     </ul>
 
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a> 
-
-    <ul style="font-size: small">
-      <li><b>Recent</b>: Invited Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
-      <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> (2017-06-14)</li>
-    </ul>
-
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em>Presentation of Inria Prosecco team</em></a> 
+  <li style="margin-bottom: 1ex;"><em>Presentation of Inria Prosecco team</em></a>
 
     <ul style="font-size: small">
       <li><a href="https://www.france-science.org/FADEx-2017-Cybersecurity-EN.html">French-American Doctoral Exchange Program (FADEx) 2017: Cybersecurity</a>: <a href="talks/2017-06-16-INRIA-Prosecco-FADEx.pdf">slides</a> (2017-06-16)</li>
@@ -68,7 +97,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
   </li>
 
-  <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy, EuroS&amp;P 2017</a></em></a> 
+  <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy, EuroS&amp;P 2017</a></em></a>
 
     <ul style="font-size: small">
       <li>General Chair's Welcome Message: <a href="talks/2017-04-26-EuroSP-Welcome.pdf">slides</a> (2017-04-26)</li>
@@ -76,7 +105,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a> 
+  <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a>
 
     <ul style="font-size: small">
       <li><a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li>
