--- a/talks.html
+++ b/talks.html
@@ -36,7 +36,7 @@
 
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="https://www.nomadic-labs.com/">Nomadic Labs Paris</a> (<a href="https://tezos.com">Tezos</a>): <a href="talks/fstar_tezos_nov_2018/out/fstar-tezos.html">slides</a>, <b><a href="https://youtu.be/SPCko8ACB0M">video</a></b> (2018-11-14)</li>
-      <li>Invited Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
+      <li><b>Invited Keynote Talk</b> at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
       <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> (2017-06-14)</li>
     </ul>
 
@@ -58,7 +58,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
   <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> Invited Keynote talk at <a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium (FROM 2018)</a>: <a href="talks/2018-06-20-Secure-Compilation-FROM.pdf">slides</a> (2018-06-20)</li>
+      <li><b>Recent:</b> <b>Invited Keynote talk</b> at <a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium (FROM 2018)</a>: <a href="talks/2018-06-20-Secure-Compilation-FROM.pdf">slides</a> (2018-06-20)</li>
     </ul>
   </li>
 
@@ -158,7 +158,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
       <li><a href="http://research.microsoft.com/en-us/labs/redmond/">Microsoft Research Redmond</a>: <a href="talks/Micro-Policies-MSR-Redmond.pdf">slides</a> (2015-08-12)</li>
 
-      <li>Invited talk at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a>: <a href="talks/Micro-Policies-PLAS.pdf">slides</a> (2015-07-06)</li>
+      <li><b>Invited Keynote talk</b> at <a href="http://www.cs.cornell.edu/conferences/plas2015/">PLAS 2015</a>: <a href="talks/Micro-Policies-PLAS.pdf">slides</a> (2015-07-06)</li>
 
       <li><a href="http://seminaire-dga.gforge.inria.fr/">Inria Rennes - DGA Seminar on Formal Methods and Security</a>: <a href="talks/Micro-Policies-Rennes.pdf">slides</a> (2015-06-19)</li>
 
