--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ MPRI website</a>.</p>
 
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="https://www.nomadic-labs.com/">Nomadic Labs Paris</a> (<a href="https://tezos.com">Tezos</a>): <a href="talks/fstar_tezos_nov_2018/out/fstar-tezos.html">slides</a>, <b><a href="https://youtu.be/SPCko8ACB0M">video</a></b> (2018-11-14)</li>
-      <li>Invited Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
+      <li><b>Invited Keynote Talk</b> at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
       <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> (2017-06-14)</li>
     </ul>
 
@@ -627,7 +627,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
   <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> Invited Keynote talk at <a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium (FROM 2018)</a>: <a href="talks/2018-06-20-Secure-Compilation-FROM.pdf">slides</a> (2018-06-20)</li>
+      <li><b>Recent:</b> <b>Invited Keynote talk</b> at <a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium (FROM 2018)</a>: <a href="talks/2018-06-20-Secure-Compilation-FROM.pdf">slides</a> (2018-06-20)</li>
     </ul>
   </li>
 
