--- a/index.html
+++ b/index.html
@@ -593,6 +593,14 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>The Quest for Formally Secure Compartmentalizing Compilation</em></a>
+
+    <ul style="font-size: small">
+      <li><b>Recent:</b> <a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense</a>: <a href="talks/2019-01-29-Secure-Compilation-Habil.pdf">slides</a> (2019-01-29)</li>
+    </ul>
+
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
 
     <ul style="font-size: small">
