--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><em>The Quest for Formally Secure Compartmentalizing Compilation</em></a>
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense</a>: <a href="talks/2019-01-29-Secure-Compilation-Habil.pdf">slides</a> (2019-01-29)</li>
+      <li><b>Recent:</b> <a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense @ Inria Paris</a>: <a href="talks/2019-01-29-Secure-Compilation-Habil.pdf">slides</a> (2019-01-29)</li>
     </ul>
 
     <ul style="font-size: small">
