--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><em>When Good Components Go Bad</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://www.sigsac.org/ccs/CCS2018/">Computer and Communications Security, CCS 2018</a>: <a href="talks/2018-10-18-When-Good-Components-Go-Bad-CCS.pdf">slides</a> (2018-10-18)</li>
+      <li><b>Recent:</b> <a href="https://www.sigsac.org/ccs/CCS2018/">Computer and Communications Security, CCS 2018</a>: <a href="talks/2018-10-18-When-Good-Components-Go-Bad-CCS.pdf">slides</a> <b><a href="https://www.youtube.com/watch?v=Wwx-g513zFs">video</a></b> (2018-10-18)</li>
       <li>DARPA SSITH/HOPE PI meeting: <a href="talks/2018-05-30-When-Good-Components-Go-Bad-SSITH-PI-Meeting.pdf">slides</a> (2018-05-30)</li>
       <li><a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=18201">Dagstuhl Seminar on Secure Compilation</a>: <a href="talks/2018-05-17-When-Good-Components-Go-Bad-Dagstuhl.pdf">slides</a> (2018-05-17)</li>
       <li><a href="https://www.irif.fr/seminaires/verif/index">IRIF Verification Seminar</a>, Paris 7: <a href="talks/2018-02-26-Secure-Compilation-IRIF.pdf">slides</a> (2018-02-26)</li>
