--- a/index.html
+++ b/index.html
@@ -119,6 +119,20 @@ could contribute:
   
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li> -->
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org/series/CPP">ACM SIGPLAN International Conference on Certified Programs and Proofs, CPP 2020</a></b> (PC Co-Chair)
+  <!-- <ul> -->
+  <!-- <li>Submission deadline: </li> -->
+  <!-- <li>Conference: </li> -->
+  <!-- </ul> -->
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.react.uni-saarland.de/rv2019/">International Conference on Runtime Verification, RV 2019</a></b> (PC member)
+  <ul>
+  <li>Submission deadline: 30 April 2019</li>
+  <li>Conference: 8-11 October 2019, Porto, Portugal</li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://secdev.ieee.org/2019/">IEEE Cybersecurity Development Conference, SecDev 2019</a></b> (PC member)
   <ul>
   <li>Submission deadline: 8 April 2019</li>
