--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@ could contribute:
   
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li> -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org/track/CPP-2019#The-CPP-Series">International Conference on Certified Programs and Proofs, CPP 2020</a></b> (PC Co-Chair)
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org/track/CPP-2019#The-CPP-Series"><!-- International Conference  -->on Certified Programs and Proofs, CPP 2020</a></b> (PC Co-Chair)
   <ul>
   <!-- <li>Submission deadline: </li> -->
   <li>Conference (tentative): 20-21 January 2019, New Orleans, Louisiana, USA</li>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.react.uni-saarland.de/rv2019/">International Conference on Runtime Verification, RV 2019</a></b> (PC member)
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.react.uni-saarland.de/rv2019/"><!-- International Conference on  -->Runtime Verification, RV 2019</a></b> (PC member)
   <ul>
   <li>Submission deadline: 30 April 2019</li>
   <li>Conference: 8-11 October 2019, Porto, Portugal</li>
