--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ could contribute:
   <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org/track/CPP-2019#The-CPP-Series"><!-- International Conference on--> Certified Programs and Proofs, CPP 2020</a></b> (PC Co-Chair)
   <ul>
   <!-- <li>Submission deadline: </li> -->
-  <li>Conference: 20-21 January 2019 (tentative), New Orleans, Louisiana, USA</li>
+  <li>Conference: 20-21 January 2019 (tentative), New Orleans, LA, USA</li>
   </ul>
   </li>
 
