--- a/index.html
+++ b/index.html
@@ -126,6 +126,12 @@ could contribute:
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><a href="http://www.dagstuhl.de/20201">Dagstuhl Seminar 20201 on Secure Compilation</a> (Co-Organizer)
+  <ul>
+  <li>Seminar: 10-15 May, 2020, Schloss Dagstuhl, Germany</li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://www.react.uni-saarland.de/rv2019/"><!-- International Conference on  -->Runtime Verification, RV 2019</a></b> (PC member)
   <ul>
   <li>Submission deadline: 30 April 2019</li>
