--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.dagstuhl.de/20201">Dagstuhl Seminar 20201 on Secure Compilation</a> (Co-Organizer)
+  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/20201">Dagstuhl Seminar 20201 on Secure Compilation</a></b> (Co-Organizer)
   <ul>
   <li>Seminar: 10-15 May, 2020, Schloss Dagstuhl, Germany</li>
   </ul>
