--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile)</li>
 
-  <li style="margin-bottom: 1ex;"><a href=""></a> (Research Intern, Paris 7 University)</li>
+  <li style="margin-bottom: 1ex;"><a href="">Antoine Van Muylder</a> (Research Intern, Paris 7 University)</li>
   <!-- <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/elabrada">Elizabeth Labrada</a> (Research Intern, University of Chile)</li> -->
 
 </ul>
