--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a> (Postdoctoral Researcher, starting in March 2019)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a> (Postdoctoral Researcher)</li>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li> -->
 
@@ -466,7 +466,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="">Antoine Van Muylder</a> (Research Intern, Paris 7 University)</li>
+  <li style="margin-bottom: 1ex;"><a href="">Antoine Van Muylder</a> (Research Intern, Paris 7 University, starting in May 2019)</li>
   <!-- <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/elabrada">Elizabeth Labrada</a> (Research Intern, University of Chile)</li> -->
 
 </ul>
