--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a> (Research Intern, Orléans University)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile, returning in August 2019)</li>
 
   <li style="margin-bottom: 1ex;"><a href="">Antoine Van Muylder</a> (Research Intern, Paris 7 University, starting in May 2019)</li>
   <!-- <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/elabrada">Elizabeth Labrada</a> (Research Intern, University of Chile)</li> -->
