--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Research Engineer)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a> (Research Intern, Orléans University)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a> (Research Engineer)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile, returning in August 2019)</li>
 
