--- a/index.html
+++ b/index.html
@@ -479,6 +479,20 @@ MPRI website</a>.</p>
 (also on <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a> and <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;">
+    Kenji Maillard,
+    Danel Ahman,
+    Robert Atkey,
+    Guido Martinez,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Exequiel Rivas, and
+    Éric Tanter.
+    <b><a href="">Dijkstra Monads for All</a></b>.
+    <!-- arXiv:1807.04603. --> March, 2018.
+    <!-- <ul style="font-size: small"> -->
+    <!--   <li><a href=""></a> -->
+    <!-- </ul> -->
+  </li>
 
   <li style="margin-bottom: 1ex;">
     Carmine Abate,
@@ -486,7 +500,7 @@ MPRI website</a>.</p>
     Deepak Garg,
     C&#259;t&#259;lin Hri&#355;cu,
     Marco Patrignani, and
-    Jérémy Thibault,
+    Jérémy Thibault.
     <b><a href="http://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
       Exploring Robust Property Preservation for Secure Compilation</a></b>.
     arXiv:1807.04603. July, 2018.
