--- a/index.html
+++ b/index.html
@@ -488,10 +488,11 @@ MPRI website</a>.</p>
     Exequiel Rivas, and
     Éric Tanter.
     <b><a href="">Dijkstra Monads for All</a></b>.
-    <!-- arXiv:1807.04603. --> March, 2018.
-    <!-- <ul style="font-size: small"> -->
-    <!--   <li><a href=""></a> -->
-    <!-- </ul> -->
+    arXiv:1903.01237. March, 2018.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/FStarLang/FStar/tree/guido_effects/examples/dm4all">Verification examples and the implementation of our framework in F*</a>
+      <li><a href="https://gitlab.inria.fr/kmaillar/dijkstra-monads-for-all">Verification examples and a formalization of SM in Coq</a>
+    </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">
