--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ MPRI website</a>.</p>
     C&#259;t&#259;lin Hri&#355;cu,
     Exequiel Rivas, and
     Éric Tanter.
-    <b><a href="">Dijkstra Monads for All</a></b>.
+    <b><a href="https://arxiv.org/abs/1903.01237">Dijkstra Monads for All</a></b>.
     arXiv:1903.01237. March, 2018.
     <ul style="font-size: small">
       <li><a href="https://github.com/FStarLang/FStar/tree/guido_effects/examples/dm4all">Verification examples and the implementation of our framework in F*</a>
