--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ MPRI website</a>.</p>
       Exploring Robust Property Preservation for Secure Compilation</a></b>.
     arXiv:1807.04603. July, 2018.
     <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Supplementary materials including Coq development</a>
+      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Coq development</a>
       <li>A previous extended abstract was called
           <a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation</a></li>
     </ul>
